# COSG

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
cosg/: __init__.py  _plotting.py  cosg.py
cosg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cosg/__pycache__/: cosg.sparse_mean_var_minor_axis-132.py37m.1.nbc  cosg.sparse_mean_var_minor_axis-132.py37m.nbi  cosg.sparse_mean_var_minor_axis-134.py37m.1.nbc  cosg.sparse_mean_var_minor_axis-134.py37m.nbi
docs/source/: conf.py  installation.rst
docs/source/api/: cosg.cosg.rst
docs/source/release-notes/: index.rst
tests/: test_cosg.py
tutorials/.ipynb_checkpoints/: COSG-tutorial-checkpoint.ipynb
